// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout renders correctly with next and prev 1`] = `
<div>
  <input
    className="dark-mode-checkbox visually-hidden"
    defaultChecked={false}
    id="dark-mode"
    onChange={[Function]}
    type="checkbox"
  />
  <div
    className="layout theme-container"
  >
    <header
      className="header"
    >
      <div
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "fontFamily": "sans-serif",
            "justifyContent": "center",
          }
        }
      >
        <div
          style={
            Object {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "column",
              "marginLeft": "1rem",
              "marginRight": "1rem",
              "width": "30%",
            }
          }
        >
          <div
            style={
              Object {
                "marginBottom": "1rem",
              }
            }
          >
            <a
              href="/"
            >
              Index Page
            </a>
          </div>
          <div>
            <a
              href="/javascript"
            >
              Prev (
              Javascript
              )
            </a>
          </div>
        </div>
        <div
          style={
            Object {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "column",
              "marginLeft": "1rem",
              "marginRight": "1rem",
              "textAlign": "center",
              "width": "40%",
            }
          }
        >
          <h1>
            Brain Blog
          </h1>
          <p
            style={
              Object {
                "opacity": 0.9,
              }
            }
          >
            Notes from random topics, connected; Loosely modeled after Zettelkasten / Roam
          </p>
        </div>
        <div
          style={
            Object {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "column",
              "marginLeft": "1rem",
              "marginRight": "1rem",
              "width": "20%",
            }
          }
        >
          <div
            style={
              Object {
                "marginBottom": "1rem",
              }
            }
          >
            <a
              href="/#"
            >
              Other Link
            </a>
          </div>
          <div>
            <a
              href="/javascript"
            >
              Next (
              Javascript
              )
            </a>
          </div>
        </div>
        <div
          style={
            Object {
              "width": "10%",
            }
          }
        >
          <span
            className="block"
            style={
              Object {
                "marginLeft": "auto",
                "marginRight": "auto",
              }
            }
          >
            Dark?
          </span>
          <label
            className="dark-mode-label switch"
            htmlFor="dark-mode"
          >
            <span
              className="slider round"
            />
          </label>
        </div>
      </div>
    </header>
    <main
      className="main"
    >
       
    </main>
    <footer
      className="footer"
    >
      <div
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "justifyContent": "center",
          }
        }
      >
        <div>
          <a
            href="/javascript"
          >
            Prev (
            Javascript
            )
          </a>
        </div>
        <div
          style={
            Object {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "column",
              "marginLeft": "1rem",
              "marginRight": "1rem",
              "textAlign": "center",
              "width": "40%",
            }
          }
        >
          <span>
            © 
            2020
            , Built by 
            Gerard R. Bentley
             Using 
            <a
              href="https://www.gatsbyjs.org"
            >
              GatsbyJS
            </a>
          </span>
        </div>
        <div>
          <a
            href="/javascript"
          >
            Next (
            Javascript
            )
          </a>
        </div>
      </div>
    </footer>
  </div>
</div>
`;

exports[`Layout renders correctly without next or prev 1`] = `
<div>
  <input
    className="dark-mode-checkbox visually-hidden"
    defaultChecked={false}
    id="dark-mode"
    onChange={[Function]}
    type="checkbox"
  />
  <div
    className="layout theme-container"
  >
    <header
      className="header"
    >
      <div
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "fontFamily": "sans-serif",
            "justifyContent": "center",
          }
        }
      >
        <div
          style={
            Object {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "column",
              "marginLeft": "1rem",
              "marginRight": "1rem",
              "width": "30%",
            }
          }
        >
          <div
            style={
              Object {
                "marginBottom": "1rem",
              }
            }
          >
            <a
              href="/"
            >
              Index Page
            </a>
          </div>
          <div />
        </div>
        <div
          style={
            Object {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "column",
              "marginLeft": "1rem",
              "marginRight": "1rem",
              "textAlign": "center",
              "width": "40%",
            }
          }
        >
          <h1>
            Brain Blog
          </h1>
          <p
            style={
              Object {
                "opacity": 0.9,
              }
            }
          >
            Notes from random topics, connected; Loosely modeled after Zettelkasten / Roam
          </p>
        </div>
        <div
          style={
            Object {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "column",
              "marginLeft": "1rem",
              "marginRight": "1rem",
              "width": "20%",
            }
          }
        >
          <div
            style={
              Object {
                "marginBottom": "1rem",
              }
            }
          >
            <a
              href="/#"
            >
              Other Link
            </a>
          </div>
          <div />
        </div>
        <div
          style={
            Object {
              "width": "10%",
            }
          }
        >
          <span
            className="block"
            style={
              Object {
                "marginLeft": "auto",
                "marginRight": "auto",
              }
            }
          >
            Dark?
          </span>
          <label
            className="dark-mode-label switch"
            htmlFor="dark-mode"
          >
            <span
              className="slider round"
            />
          </label>
        </div>
      </div>
    </header>
    <main
      className="main"
    >
       
    </main>
    <footer
      className="footer"
    >
      <div
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "justifyContent": "center",
          }
        }
      >
        <div />
        <div
          style={
            Object {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "column",
              "marginLeft": "1rem",
              "marginRight": "1rem",
              "textAlign": "center",
              "width": "40%",
            }
          }
        >
          <span>
            © 
            2020
            , Built by 
            Gerard R. Bentley
             Using 
            <a
              href="https://www.gatsbyjs.org"
            >
              GatsbyJS
            </a>
          </span>
        </div>
        <div />
      </div>
    </footer>
  </div>
</div>
`;
